--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             </div>
         </div>
     </div>
-    <script src="app3.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
